Fixed collapsing containers @ 963px
Main fix Wrapper @ max-width 963px. Added other minor changes.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-	background-color: #f4f4f4;
+	background-color: silver;
 	text-align: center;
 	margin: 0;	
 }
@@ -25,6 +25,8 @@ a:hover {
 /************ 	NAVIGATION AND HEADER ************/
 .student-name {
 	font-size: 28px;
+	color: goldenrod;
+	text-shadow: 2px 2px 2px #000;
 }
 
 .main-nav {
@@ -51,15 +53,17 @@ a:hover {
  	width: 80%;
  	max-width: 350px;
  	text-align: center;
+ 	border-radius: 2em;
+ 	box-shadow: 10px 10px 10px #000;
 }
 
 /************   MAIN CONTEN  **********/
 
-.wrap {
+.wrapper {
 	background: white;
 	max-width: 100%;
-	padding: 4em .5em;
-	
+	padding: 3em .5em 2em .5em;
+	box-shadow: 10px 10px 10px #000;
 }
 
 .container {
@@ -69,6 +73,8 @@ margin: 0;
 
 img {
 	max-width: 100%;
+	border-radius: 2em;
+	box-shadow: 10px 10px 10px #000;
 }
 
 
@@ -79,9 +85,11 @@ footer {
 	border-top: solid 1px gray;
 }
  .signiture {
- display: inline-block;
- float: left;
- padding-left: 1em;
+ 	display: inline-block;
+ 	float: left;
+ 	padding-left: 1em;
+ 	color: goldenrod;
+	text-shadow: 2px 2px 2px #000;
  }
 
  .top {
@@ -98,7 +106,7 @@ footer {
 
 /*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! 
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-     START OF  MEDAI QUIRIES 
+    THE START OF  MEDIA QUIRIES 
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!      
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
 
@@ -111,7 +119,7 @@ footer {
 @media screen and (min-width: 768px) {
 
 
-/************ 	NAVIGATION AND HEADER ************/
+/************ 	TABLET NAVIGATION AND HEADER ************/
 .main-nav {
 	text-align: center;
 }	
@@ -153,10 +161,14 @@ footer {
 	display: table;
 	clear: both;
 }
+.wrapper {
+	max-width: 963px;
+}
 
-.pic1, .pic2, .pic3, .pic4, .pic5, .pic6 {
-	max-width: 50%;
-	display: inline;
+.container{
+	width: 50%;
+	display: inline-block;
+	vertical-align: bottom;
 }
 
 .pic1, .pic3, .pic5 {
@@ -167,6 +179,7 @@ footer {
 	float: right;
 	padding: 1em 1em 0 .3em;
 }
+
 
 
 
@@ -229,12 +242,13 @@ footer {
 		}
 /************ DESKTOP MAIN CONTENT  **********/
 
-		.wrap {
+		.wrapper {
 			margin: 0 2em;
+			max-width: 100%;
 
 
 		}
-		.pic1, .pic2, .pic3, .pic4, .pic5, .pic6 {
+		.container {
 		max-width: 30%;
 		float: none;
 		display: inline-block;
